--- a/.ebextensions/composer.config
+++ b/.ebextensions/composer.config
@@ -1,8 +1,3 @@
-commands:
-  01updateComposer:
-    command: export COMPOSER_HOME=/root && /usr/bin/composer.phar self-update
+#!/bin/bash
 
-option_settings:
-  - namespace: aws:elasticbeanstalk:application:environment
-    option_name: COMPOSER_HOME
-    value: /root
+python /home/ec2-user/download-normal.py
