--- a/.ebextensions/composer.config
+++ b/.ebextensions/composer.config
@@ -1,3 +1,3 @@
-#!/bin/bash
-
-python3 /home/ec2-user/download-normal.py
+commands:
+    command: "python3 /home/ec2-user/parallel-normal.py"
+    ignoreErrors: false
