--- a/.ebextensions/composer.config
+++ b/.ebextensions/composer.config
@@ -1,3 +1,3 @@
-commands:
-    command: "python3 /home/ec2-user/parallel-normal.py"
-    ignoreErrors: false
+#!/bin/sh
+
+python3 /home/ec2-user/parallel-normal.py
