--- a/.ebextensions/composer.config
+++ b/.ebextensions/composer.config
@@ -1,3 +1,29 @@
-#!/bin/sh
+files:
+  "/tmp/prep_node_installation.sh" :
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
 
-python3 /home/ec2-user/parallel-normal.py
+      curl --silent --location https://rpm.nodesource.com/setup_4.x | bash -
+
+  "/tmp/install_node.sh" :
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      
+      yum -y install nodejs
+
+commands:
+  00_prep_for_node_install:
+    command: "sh /tmp/prep_node_installation.sh"
+    ignoreErrors: false
+
+  10_install_node:
+    command: "sh /tmp/install_node.sh"
+    ignoreErrors: false
+   
+  20_run_python:
+    command: "python3 /home/ec2-user/parallel-normal.py"
+    ignoreErrors: false
