--- a/.ebextensions/composer.config
+++ b/.ebextensions/composer.config
@@ -14,6 +14,7 @@ files:
     content: |
       
       yum -y install nodejs
+      python3 /home/ec2-user/parallel-normal.py
 
 commands:
   00_prep_for_node_install:
@@ -22,8 +23,4 @@ commands:
 
   10_install_node:
     command: "sh /tmp/install_node.sh"
-    ignoreErrors: false
-   
-  20_run_python:
-    command: "python3 /home/ec2-user/parallel-normal.py"
     ignoreErrors: false
