--- a/.ebextensions/composer.config
+++ b/.ebextensions/composer.config
@@ -1,3 +1,27 @@
-#!/bin/sh
+files:
+  "/root/prep_node_installation.sh" :
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      #! /bin/bash
+      # Uncomment the line that relates to the specific major node version you want installed
 
-python3 download.py
+      #  The URL without a major version branch below will result in a node 0.10 installation
+      #  curl --silent --location https://rpm.nodesource.com/setup | bash -
+      python3 download.py
+      #  curl --silent --location https://rpm.nodesource.com/setup_4.x | bash -
+      #  curl --silent --location https://rpm.nodesource.com/setup_6.x | bash -
+
+  "/tmp/install_node.sh" :
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      #! /bin/bash
+      yum -y install nodejs
+
+commands:
+  00_prep_for_node_install:
+    command: "sh /tmp/prep_node_installation.sh"
+    ignoreErrors: false
