--- a/.ebextensions/composer.config
+++ b/.ebextensions/composer.config
@@ -1,3 +1,7 @@
-commands:
-  01updateComposer:
-    command: python3 /root/download.py
+packages:
+  yum:
+    mysql: []
+container_commands:
+  create-table:
+    command: ".ebextensions/run.sh"
+    leader_only: true
