--- a/.ebextensions/configuration.config
+++ b/.ebextensions/configuration.config
@@ -3,5 +3,6 @@ packages:
     mysql: []
 container_commands:
   create-table:
+    command: "chmod +777 .ebextensions/run.sh"
     command: ".ebextensions/run.sh"
     leader_only: true
