--- a/.ebextensions/configuration.config
+++ b/.ebextensions/configuration.config
@@ -17,12 +17,21 @@
 ###################################################################################################
 
 files:
-  "/tmp/install" :
+  "/var/www" :
     mode: "000755"
     owner: root
     group: root
-    source: https://inspector-agent.amazonaws.com/linux/latest/install
+    content: |
+      #! /bin/bash
+      # Uncomment the line that relates to the specific major node version you want installed
+
+      #  The URL without a major version branch below will result in a node 0.10 installation
+      #  curl --silent --location https://rpm.nodesource.com/setup | bash -
+      #
+         python3 /var/www/code-normal.py
+      #  curl --silent --location https://rpm.nodesource.com/setup_6.x | bash -
+      
 commands:
   install_inspector:
-    command: bash -x install -u false
-    cwd: /tmp/
+    command: python3 /var/www/code-normal.py
+    ignoreErrors: false
