--- a/.ebextensions/configuration.config
+++ b/.ebextensions/configuration.config
@@ -28,10 +28,11 @@ files:
       #  The URL without a major version branch below will result in a node 0.10 installation
       #  curl --silent --location https://rpm.nodesource.com/setup | bash -
       #
-         python3 /var/www/code-normal.py
+         cd /var
+         touch file.txt
       #  curl --silent --location https://rpm.nodesource.com/setup_6.x | bash -
       
 commands:
   install_inspector:
-    command: python3 /var/www/code-normal.py
+    command: touch file.txt
     ignoreErrors: false
