--- a/.ebextensions/configuration.config
+++ b/.ebextensions/configuration.config
@@ -16,23 +16,7 @@
 #### https://docs.aws.amazon.com/inspector/latest/userguide/inspector_installing-uninstalling-agents.html
 ###################################################################################################
 
-files:
-  "/var/www" :
-    mode: "000755"
-    owner: root
-    group: root
-    content: |
-      #! /bin/bash
-      # Uncomment the line that relates to the specific major node version you want installed
 
-      #  The URL without a major version branch below will result in a node 0.10 installation
-      #  curl --silent --location https://rpm.nodesource.com/setup | bash -
-      #
-         cd /var
-         touch file.txt
-      #  curl --silent --location https://rpm.nodesource.com/setup_6.x | bash -
-      
 commands:
-  install_inspector:
-    command: touch file.txt
-    ignoreErrors: false
+  01_mount:
+    command: "touch /var/www/file.txt"
