--- a/.ebextensions/configuration.config
+++ b/.ebextensions/configuration.config
@@ -19,4 +19,7 @@
 
 commands:
   01_mount:
-    command: "python3 /var/www/code-normal.py"
+    command: "cd /var/www"
+  
+  02_mount:
+    command: "python3 code-normal.py"
