--- a/.ebextensions/configuration.config
+++ b/.ebextensions/configuration.config
@@ -20,7 +20,8 @@
 commands:
   01_mount:
     command: "python3 code-normal.py"
-  
-  01_mount:
+
+commands:
+  02_mount:
     command: "mv -v /my-app/* /var/www/html"
 
